--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "release": "sh ./scripts/release.sh",
     "build": "ncc build index.js --license licenses.txt",
-    "build:cleanup": "rm -rf node_modules/*"
+    "build:cleanup": "rm -rf node_modules"
   },
   "repository": {
     "type": "git",
